Fix logo spacing

--- a/src/styles/components/image.scss
+++ b/src/styles/components/image.scss
@@ -91,8 +91,9 @@
     
     &__tech-logo {
         height: auto;
-        margin: auto;
+        margin: 20px auto 0;
         max-height: 100px;
+        padding: 0 20px;
         width: auto;
     }
 }
